@@ -1,0 +1,54 @@
+<!doctype html PUBLIC "-//W3C//DTD html 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+<title>Coverage report</title>
+<link rel='stylesheet' href='style.css' type='text/css'>
+</head>
+<body>
+
+<div id='header'>
+    <div class='content'>
+        <h1>Coverage report: 
+            <span class='pc_cov'>{{total_cov|format_pct}}%</span>
+        </h1>
+    </div>
+</div>
+
+<div id='index'>
+<table class='index'>
+<tr>
+    <th class='name'>Module</th>
+    <th>statements</th>
+    <th>run</th>
+    <th>excluded</th>
+    <th>coverage</th>
+</tr>
+{% for file in files %}
+<tr>
+    <td class='name'><a href='{{file.html_filename}}'>{{file.cu.name}}</a></td>
+    <td>{{file.stm}}</td>
+    <td>{{file.run}}</td>
+    <td>{{file.exc}}</td>
+    <td>{{file.pc_cov|format_pct}}%</td>
+</tr>
+{% endfor %}
+<tr class='total'>
+<td class='name'>Total</td>
+<td>{{total_stm}}</td>
+<td>{{total_run}}</td>
+<td>{{total_exc}}</td>
+<td>{{total_cov|format_pct}}%</td>
+</tr>
+</table>
+</div>
+
+<div id='footer'>
+    <div class='content'>
+        <p>
+            <a class='nav' href='http://bitbucket.org/ned/coveragepy/'>coverage.py v{{__version__}}</a>
+        </p>
+    </div>
+</div>
+
+</body>
+</html>
