@@ -1,6 +1,6 @@
 /* CSS styles for coverage.py */
 /* Page-wide styles */
-html, body, h1, h2, h3, p, td {
+html, body, h1, h2, h3, p, td, th {
     margin: 0;
 	padding: 0;
 	border: 0;
@@ -14,6 +14,7 @@ html, body, h1, h2, h3, p, td {
 
 /* Set baseline grid to 16 pt. */
 body {
+    font-family: georgia, serif;
     font-size: 1em;
     }
 
@@ -25,6 +26,10 @@ html>body {
 p {
     font-size: .75em;        /* 12/16 */
     line-height: 1.3333em;   /* 16/12 */
+    }
+
+table {
+    border-collapse: collapse;
     }
 
 a.nav {
@@ -40,7 +45,6 @@ a.nav:hover {
 #header {
     background: #f8f8f8;
     width: 100%;
-    font-family: georgia, serif;
     border-bottom: 1px solid #eee;
     }
 
@@ -56,9 +60,13 @@ a.nav:hover {
     font-style: italic;
     }
 
+#index {
+    margin: 1em 0 0 3em;
+    }
+
 /* Header styles */
 .content {
-    padding: 1em 3em .5em 3em;
+    padding: 1em 3em;
     }
 
 h1 {
@@ -114,4 +122,38 @@ td.text {
     }
 .text p.hide {
     background: inherit;
+    }
+
+/* index styles */
+#index td, #index th {
+    text-align: right;
+    width: 6em;
+    padding: .25em 0;
+    border-bottom: 1px solid #eee;
+    }
+#index th {
+    font-style: italic;
+    color: #333;
+    border-bottom: 1px solid #ccc;
+    }
+#index td.name, #index th.name {
+    text-align: left;
+    width: auto;
+    height: 1.5em;
+    }
+#index td.name a {
+    text-decoration: none;
+    color: #000;
+    }
+#index td.name a:hover {
+    text-decoration: underline;
+    color: #000;
+    }
+#index tr.total {
+    font-weight: bold;
+    }
+#index tr.total td {
+    padding: .25em 0;
+    border-top: 1px solid #ccc;
+    border-bottom: none;
     }
